// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`resolveHandshakeTokenSource > handles array-valued dpop header 1`] = `
{
  "dpopProof": "proof-a",
  "kind": "dpop",
  "token": "jwt",
}
`;

exports[`resolveHandshakeTokenSource > prefers bearer over session when both present 1`] = `
{
  "dpopProof": undefined,
  "kind": "bearer",
  "token": "jwt",
}
`;

exports[`resolveHandshakeTokenSource > returns bearer when handshake.auth.bearer is present 1`] = `
{
  "dpopProof": undefined,
  "kind": "bearer",
  "token": "jwt",
}
`;

exports[`resolveHandshakeTokenSource > returns dpop when handshake.auth.bearer and dpop header both present 1`] = `
{
  "dpopProof": "proof",
  "kind": "dpop",
  "token": "jwt",
}
`;

exports[`resolveHandshakeTokenSource > returns none when nothing available 1`] = `
{
  "kind": "none",
}
`;

exports[`resolveHandshakeTokenSource > returns session when no handshake bearer and socket.data.session present 1`] = `
{
  "kind": "session",
  "session": {
    "accessToken": "session-jwt",
    "expiresAt": 2026-04-11T13:00:00.000Z,
    "id": "sess-1",
    "issuedAt": 2026-04-11T12:00:00.000Z,
    "scope": [
      "openid",
    ],
    "subject": "sub",
  },
}
`;
